--- a/app/components/ui/feedback-form/FeedbackForm.module.scss
+++ b/app/components/ui/feedback-form/FeedbackForm.module.scss
@@ -4,17 +4,14 @@
 }
 
 .form__inner {
-	display: -ms-grid;
 	display: grid;
-	-ms-grid-rows: 1fr;
-	-ms-grid-columns: auto 20px 1fr;
-	grid-template: 1fr / auto 1fr;
-	-webkit-column-gap: 20px;
-	-moz-column-gap: 20px;
-	column-gap: 20px;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
+	grid-template: auto / 1fr;
+	gap: 20px;
 	align-items: center;
+	@media (min-width: 744px) {
+		grid-template: 1fr / auto 1fr;
+		align-items: center;
+	}
 }
 @supports (
 	margin-top: clamp(0.625rem, 0.4973404255rem + 0.6382978723vw, 1rem)
