--- a/app/components/screens/home/Home.module.scss
+++ b/app/components/screens/home/Home.module.scss
@@ -46,6 +46,7 @@
 .home__promo-slider ul li.swiper-slide-active {
 	opacity: 1;
 	pointer-events: all;
+	z-index: 10000;
 }
 .home__promo-title {
 	line-height: 110%;
