--- a/app/components/screens/catalog/Catalog.module.scss
+++ b/app/components/screens/catalog/Catalog.module.scss
@@ -256,6 +256,7 @@
 	height: 100%;
 	-o-object-fit: cover;
 	object-fit: cover;
+	filter: brightness(0.5);
 }
 .category__list-img h2 {
 	position: absolute;
